--- a/joke-displayer/src/main/res/layout/activity_joke_displayer.xml
+++ b/joke-displayer/src/main/res/layout/activity_joke_displayer.xml
@@ -10,7 +10,13 @@
         android:id="@+id/tv_joke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Hello World!"
+        android:textSize="20sp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
