--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">#4a7aff</item>
+        <item name="colorPrimaryDark">#0f4fff</item>
+        <item name="colorAccent">#ffe000</item>
     </style>
 
 </resources>
